--- a/src/app/user-registration/user-registration.component.html
+++ b/src/app/user-registration/user-registration.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row inp">
-        <h1 align="center">Registration</h1>
+        <h1 align="center">AMS Registration</h1>
     </div>
     <div class="register">
         <div class="card">
