--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row inp">
-        <h1 align="center">Login</h1>
+        <h1 align="center">Login to AMS</h1>
     </div>
     <div class="login">
         <div class="card">
